[project]
name = "agenticrag"
version = "0.1.0"
description = ""
authors = [
    {name = "hihry",email = "work.himanshu.r.v@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "langchain (>=1.2.9,<2.0.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "tavily-python (>=0.7.21,<0.8.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
