[project]
name = "reactagentflow"
version = "0.1.0"
description = ""
authors = [
    {name = "hihry",email = "work.himanshu.r.v@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
